--- a/Pages/disaster/profile/reliefgoodspack/Record.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Record.cshtml
@@ -144,6 +144,7 @@
     $(document).ready(function () {
         var table = $('#record-table').DataTable({
             responsive: true,
+            pageLength: 100;
             columnDefs: [
                 { "orderable": true, "targets": [0, 1, 2, 3, 4, 5] } // Sortable columns
             ]
