--- a/Pages/family/profile/distribution/View.cshtml
+++ b/Pages/family/profile/distribution/View.cshtml
@@ -124,6 +124,7 @@
 	$(document).ready(function () {
 		var table = $('#pack-inclusion').DataTable({
 			responsive: true,
+			pageLength: 100;
 			columnDefs: [
 				{ "orderable": true, "targets": [0, 1, 3] }, // Sortable columns
 				{ "orderable": false, "targets": [2] } // Non-sortable columns
