--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -10,7 +10,7 @@
     }
 
     .custom-background {
-        background-image: url("/images/ec1img.jpg");
+        background-image: url("/images/bgimg.jpg");
         background-size: cover;
         background-position: center;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -41,67 +41,85 @@
 
     <div class="row g-5">
         <div class="col-md-8">
-            <h3>About Us</h3>
+            <h2 class ="pb-2 border-bottom">About Us</h2>
             <article class="about-us">
                 <p>
                     In response to the evolving challenges faced by disaster responders, Agapay Aid emerges as a pioneering solution inspired by the growing need for efficiency and precision in disaster relief efforts. Stemming from the lessons learned from the DSWD's Disaster Assistance Family Access Card (DAFAC) and acknowledging the drawbacks of paper-based systems, Agapay Aid steps forward as a transformative web-based application.
                     <br /> <br />
                     Initially designed to enhance the DSWD's profiling tool, Agapay Aid envisions a future where disaster relief is not hindered by administrative bottlenecks. The heart of our mission lies in streamlining the intricate web of tasks involved in managing evacuation centers, assigning staff, and ensuring the fair distribution of relief goods. Our web-based platform aims to alleviate the burdens of paperwork, limited coverage, and information management challenges faced by traditional systems.
                 </p>
-
             </article>
-
-            <h3>Our Mission</h3>
-            <article class="our-mission">
-                <p>
-                    Our mission is to enhance the efficiency of evacuation center management and relief distribution, ensuring swift and equitable support for every affected individual. 
-                    We strive to provide real-time tracking, comprehensive evacuee management, and streamlined relief distribution. 
-                    By automating processes and centralizing information, AgapayAid aims to empower disaster responders with the tools they need to make a meaningful impact during critical times.
-                </p>
-            </article>
-
-            <div>
-                <h3>Meet the Team</h3>
-
-                <div class="row g-3 p-5 text-center">
-                    <div class="col-md-6">
-                        <img src="/images/tagala.png" alt="Agatha Gwen Tagala" class="bd-placeholder-img rounded-circle" width="140" height="140">
-                        <h5 class="pt-2">Agatha Gwen Tagala</h5>
-                        <p>Leader, Back-end Developer</p>
-                    </div>
-
-                    <div class="col-md-6">
-                        <img src="/images/guzon.png" alt="Jeanne Margaret Guzon" class="bd-placeholder-img rounded-circle" width="140" height="140">
-                        <h5 class="pt-2">Jeanne Margaret Guzon</h5>
-                        <p>Front-end Developer</p>
-                    </div>
-
-                    <div class="col-md-6">
-                        <img src="/images/bartolome.jpg" alt="Ian Vincent Bartolome" class="bd-placeholder-img rounded-circle" width="140" height="140">
-                        <h5 class="pt-2">Ian Vincent Bartolome</h5>
-                        <p>Front-end Developer</p>
-                    </div>
-
-                    <div class="col-md-6">
-                        <img src="/images/sudaria.png" alt="Patrick Sudaria" class="bd-placeholder-img rounded-circle" width="140" height="140">
-                        <h5 class="pt-2">Patrick Sudaria</h5>
-                        <p>Back-end Developer</p>
-                    </div>
-                </div>
-            </div>  
         </div>
 
         <div class="col-md-4">
-            <div class="position-sticky" style="top: 2rem;">
-                <div class="p-4 mb-3 bg-light rounded">
-                    <h4 class="fst-italic pb-1">Did you know?</h4>
+            <div style="top: 2rem;">
+                <div class="p-4 bg-light border rounded-3" style="vertical-align:middle">
+                    <h2 class="fst-italic pb-1">Do you know?</h2>
                     <p class="mb-0">
                         In 2022, the World Risk Report listed the <b>Philippines as the 1st most disaster-prone country</b> because of its high risk, exposure, and vulnerability to
                         natural catastrophes and calamities such as earthquakes, typhoons, storm surges, tsunamis, volcanic eruptions, and flooding.
                     </p>
                 </div>
+            </div>
+        </div>
+    </div>
 
-                @*<div class="p-4">
+    <br />
+
+    <div class="row g-4 text-center">
+        <h2 class="pb-2 border-bottom">Meet the Team</h2>
+
+        <div class="col-lg-3 col-md-6">
+            <img src="/images/tagala.png" alt="Agatha Gwen Tagala" class="bd-placeholder-img rounded text-center" width="250" height="250">
+            <h5 class="pt-2 ">Agatha Gwen Tagala</h5>
+            <p>Leader, Back-end Developer</p>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+            <img src="/images/bartolome.jpg" alt="Ian Vincent Bartolome" class="bd-placeholder-img rounded text-center" width="250" height="250">
+            <h5 class="pt-2">Ian Vincent Bartolome</h5>
+            <p>Front-end Developer</p>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+            <img src="/images/guzon.png" alt="Jeanne Margaret Guzon" class="bd-placeholder-img rounded text-center" width="250" height="250">
+            <h5 class="pt-2">Jeanne Margaret Guzon</h5>
+            <p>Front-end Developer</p>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+            <img src="/images/sudaria.png" alt="Patrick Sudaria" class="bd-placeholder-img rounded text-center" width="250" height="250">
+            <h5 class="pt-2">Patrick Sudaria</h5>
+            <p>Back-end Developer</p>
+        </div>
+    </div>
+</main>
+
+<div class="row align-items-center g-lg-5 py-5">
+    <div class="mx-auto col-lg-6">
+        <div class="p-3 p-md-4 border rounded-3 bg-primary text-white">
+            <div class="row mb-2">
+                <h6 class="text-white"><i class="bi bi-envelope-fill pe-2"></i><b>Email address:</b></h6>
+                <p>agapayaidproject@gmail.com</p>
+            </div>
+
+            <div class="row">
+                <h6 class="text-white"><i class="bi bi-telephone-fill pe-2"></i><b>Contact Number:</b></h6>
+                <p>+2093482923</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-6 text-center text-lg-start">
+        <h2 class="pb-2 border-bottom">Contact Us</h2>
+        <p class="col-lg-10">
+            We appreciate your interest in connecting with us. If you have any inquiries, feedback, or collaboration proposals,
+            please feel free to reach out to us through the following contacts:
+        </p>
+    </div>
+</div>
+
+@*<div class="p-4">
                     <h4 class="fst-italic pb-1">Contact Us</h4>
                     <form id="contactForm">
                         <div class="mb-3">
@@ -123,7 +141,3 @@
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>*@
-            </div>
-        </div>
-    </div>
-</main>
