--- a/Pages/evacuationcenter/Index.cshtml
+++ b/Pages/evacuationcenter/Index.cshtml
@@ -85,12 +85,14 @@
 		<thead>
 			<tr style="vertical-align: top;">
 				<th width="5%">#</th>
-				<th width="25%">Evacuation Center</th>
-				<th width="20%">Type</th>
+				<th width="20%">Evacuation Center</th>
+				<th width="15%">Type</th>
+				<th width="20%">Street Address</th>
 				<th width="18%">Barangay</th>
 				<th width="7%">Capacity</th>
 				<th width="15%">Status</th>
-				<th width="10%"> </th>
+				<th width="5%"> </th>
+				
 			</tr>
 		</thead>
 		<tbody>
@@ -103,6 +105,7 @@
 					<td>@counter</td>
 					<td>@item.centerName</td>
 					<td>@item.centerType</td>
+					<td>@item.streetAddress</td>
 					<td>@item.barangayName</td>
 					<td>@item.maxCapacity</td>
 					<td>
@@ -116,7 +119,7 @@
 						}
 					</td>
 					<td>
-						<a class="btn btn-success edit-button" href="/evacuationcenter/profile/?centerID=@item.centerID">
+						<a class="btn btn-success edit-button" href="/evacuationcenter/profile?centerID=@item.centerID">
 							View
 						</a>
 					</td>
@@ -140,12 +143,12 @@
 			responsive: true,
 			pageLength: 25,
 			columnDefs: [
-				{ "orderable": true, "targets": [0, 1, 4] }, // Sortable columns
-				{ "orderable": false, "targets": [3, 2, 5, 6] } // Non-sortable columns
+				{ "orderable": true, "targets": [0, 1, 3, 5] }, // Sortable columns
+				{ "orderable": false, "targets": [4, 2, 6, 7] } // Non-sortable columns
 			]
 		});
 
-		table.columns([2, 3, 5]).every(function () {
+		table.columns([2, 4, 6]).every(function () {
 			var column = this;
 			var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
 			var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
@@ -162,7 +165,7 @@
 
 			column.data().unique().sort().each(function (d, j) {
 				// Only add the options "Check-in" and "Check-out" for the "Status" column
-				if (column.index() === 5) {
+				if (column.index() === 6) {
 					// Set specific filter options only if they haven't been added
 					if (menu.find("input[value='Active']").length === 0) {
 						menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Active">' +
