--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -436,8 +436,15 @@ form {
     .ec-subtitle {
         white-space: normal; /* Allow text to wrap on mobile screens */
     }
-}
 
+    .select2-selection {
+        padding: 0.5rem 1rem; /* Adjust padding for smaller screens */
+    }
+
+    .select2-search--dropdown .select2-search__field {
+        padding: 0.5rem; /* Adjust padding for search input on smaller screens */
+    }
+}
 
 #ec {
     overflow: hidden; /* Ensure the content within the table doesn't overflow */
@@ -450,4 +457,45 @@ form {
 }
 
 
+/* Custom styles for Select2 dropdown */
+.select2-container {
+    width: 100%; /* Set the width of the dropdown */
+}
 
+.select2-selection {
+    padding: 0.5rem 3rem 0.5rem 1rem;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 2;
+    color: var(--bs-body-color);
+    background-color: var(--bs-body-bg);
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    border-radius: var(--bs-border-radius);
+    transition: border-color 0.15s ease-in-out;
+    vertical-align: central;
+}
+
+.select2-container--default .select2-selection--single {
+    border-radius: var(--bs-border-radius); /* Adjust border radius for single selection */
+}
+
+.select2-dropdown {
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    border-radius: var(--bs-border-radius);
+}
+
+.select2-results__option {
+    padding: 0.5rem 1rem;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 2;
+    color: var(--bs-body-color);
+}
+
+.select2-search__field {
+    width: 100%; /* Set the width of the search input */
+}
+
+.select2-search--dropdown .select2-search__field {
+    padding: 0.5rem 1rem;
+}
