--- a/Pages/Login/Index.cshtml
+++ b/Pages/Login/Index.cshtml
@@ -4,6 +4,27 @@
     ViewData["Title"] = "Login";
 }
 
+<!-- Alert Banners -->
+@if (!string.IsNullOrEmpty(Model.errorMessage))
+{
+    <div class="position-fixed top-0 end-0 p-3" style="z-index: 1000;">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Error: @Model.errorMessage</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+}
+
+@if (!string.IsNullOrEmpty(Request.Query["errorMessage"]))
+{
+    <div class="position-fixed top-0 end-0 p-3" style="z-index: 1000;">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Error: @Request.Query["errorMessage"]</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+}
+
 <style>
     .wrapper {
         position: relative;
@@ -89,33 +110,29 @@
     }
 </style>
 
-<body>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-	<div class="wrapper">
-		<div class="form-box login">
-            <ion-icon class="ion-icon" name="log-in"></ion-icon>
-            <h2 class="form-header">Login</h2>
-			<form method="POST">
-                <div class="labels-container">
-                    <label>Username</label>
-				        <div class="input-box">
-                            <input text="username" required placeholder="Enter your username">
-				        </div>
-				        
-                        <div class="input-box">
-                    <label class="password-label">Password</label>
-                        <a href="#" class="forgot-password">Forgot Password?</a>
-                            <input id="passwordInput" type="password" required placeholder="Enter your password">
-				        </div>
+<div class="wrapper">
+    <div class="form-box login">
+        @*<ion-icon class="ion-icon" name="log-in"></ion-icon>*@
+        <br />
+        <h2 class="form-header">Login</h2>
+        <form method="POST">
+            <div class="labels-container">
+                <label>Username</label>
+                <div class="input-box">
+                    <input name="username" type="text" required placeholder="Enter your username">
                 </div>
 
-				<button type="submit" class="btnlogin-popup">Login</button>
-			</form>
-		</div>
-	</div>
+                <div class="input-box">
+                    <label class="password-label">Password</label>
+                    <a href="#" class="forgot-password">Forgot Password?</a>
+                    <input name="password" type="password" required placeholder="Enter your password">
+                </div>
+            </div>
 
-
-	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
-</body>
+            <button type="submit" class="btnlogin-popup">Login</button>
+        </form>
+    </div>
+</div>
