--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -66,6 +66,8 @@
 <div class="row mb-2">
     <div class="col-12 d-flex align-items-center justify-content-between">
         <h1><i class="bi bi-person-lines-fill" style="padding: 0 5px 0 5px;"></i>User Management</h1>
+        @*<p>User ID: @Model.UserId</p>
+        <p>User Type: @Model.UserType</p>*@
 
         <div class="d-flex justify-content-end align-items-center">
             <a class="btn btn-primary mb-2 d-none d-sm-inline" href="/usermanagement/add">
