--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -161,25 +161,25 @@ else
                                     <tr class="openMail" data-msgid="2302060001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
                                         <td class="mailbox-date">February 06, 2023</td>
                                         <td class="mailbox-subject">You have a new assignment!<br></td>
-                                        <td class="mailbox-date text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                                    <td class="mailbox-date text-danger"><i class="bi bi-envelope-fill"></i></td>
                                     </tr>
 
                                     <tr class="openMail" data-msgid="2109240001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
                                         <td class="mailbox-date">September 24, 2021</td>
                                         <td class="mailbox-subject">You have a new assignment!<br></td>
-                                        <td class="mailbox-date text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                                        <td class="mailbox-date text-success"><i class="bi bi-envelope-paper-fill"></i></td>
                                     </tr>
 
                                     <tr class="openMail" data-msgid="2011190001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
                                         <td class="mailbox-date">November 19, 2020</td>
-                                        <td class="mailbox-subject">You have a new assignment!0<br></td>
-                                        <td class="mailbox-date text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                                        <td class="mailbox-subject">You have a new assignment!<br></td>
+                                        <td class="mailbox-date text-success"><i class="bi bi-envelope-paper-fill"></i></td>
                                     </tr>
 
                                     <tr class="openMail" data-msgid="2009290001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
                                         <td class="mailbox-date">September 29, 2020</td>
                                         <td class="mailbox-subject">You have a new assignment!<br></td>
-                                        <td class="text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                                        <td class="text-success"><i class="bi bi-envelope-paper-fill"></i></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -204,7 +204,7 @@ else
             </div>
             <div class="modal-body" id="modal-msg-body"></div>
             <div class="modal-footer text-right">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Redirect to page (placeholder)</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">(placeholder)</button>
             </div>
         </div>
     </div>
