--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -192,7 +192,64 @@ else
         </div>
 </div>
 
-<!-- MODAL -->
+
+
+<!-- MODAL-->
+<div class="modal fade" id="modal-msg" tabindex="-1">
+    <div class="modal-dialog modal-md">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal-msg-title"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="modal-msg-body"></div>
+            <div class="modal-footer text-right">
+                <a href="/evacuationcenter/profile" class="btn btn-secondary" data-dismiss="modal">(placeholder)</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Handle click on table rows
+        var mailRows = document.querySelectorAll('.openMail');
+        mailRows.forEach(function (row) {
+            row.addEventListener('click', function () {
+                var subject = this.getAttribute('data-msgsubj');
+                var from = this.getAttribute('data-msgfrom');
+                var date = this.querySelector('.mailbox-date').textContent;
+                var body = this.querySelector('.mailbox-subject').innerHTML;
+                var evacuationCenter = this.getAttribute('data-evacuation-center');
+                var disasterName = this.getAttribute('data-disaster-name');
+
+                // Set modal content dynamically
+                document.getElementById('modal-msg-title').textContent = subject;
+                document.getElementById('modal-msg-body').innerHTML = '<h6>From: <span id="msg-from">' + from + '</span><span class="mailbox-read-time float-right"><span id="msg-date">' + date + '</span></span></h6> <br>' +
+                    '<p>Evacuation Center: ' + evacuationCenter + '</p>' +
+                    '<p>Disaster Name: ' + disasterName + '</p>';
+
+                // Show the modal
+                var modal = new bootstrap.Modal(document.getElementById('modal-msg'));
+                modal.show();
+            });
+        });
+    });
+</script>
+<!-- End Inbox -->
+
+
+@*<script>
+    function showInfo(disasterType, description, dateOccured) {
+        // Set the content of the modal with the provided info
+        document.getElementById('disasterType').innerText = disasterType;
+        document.getElementById('description').innerText = description;
+        document.getElementById('dateOccured').innerText = dateOccured;
+    }
+</script>*@
+
+
+@*<!-- MODAL -->
 <div class="modal fade" id="modal-msg" tabindex="-1" aria-labelledby="modal-msg-title" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -208,10 +265,10 @@ else
             </div>
         </div>
     </div>
-</div>
+</div>*@
 
 
-<script>
+@*<script>
     $(document).ready(function () {
         // Handle click on table rows
         $('.openMail').on('click', function () {
@@ -224,8 +281,7 @@ else
 
             // Set modal content dynamically
             $('#modal-msg-title').text(subject);
-            $('#modal-msg-body').html('<h6>From: <span id="msg-from">' + from + '</span><span class="mailbox-read-time float-right"><span id="msg-date">' + date + '</span></span></h6>' +
-                '<p id="msg-body">' + body + '</p>' +
+            $('#modal-msg-body').html('<h6>From: <span id="msg-from">' + from + '</span><span class="mailbox-read-time float-right"><span id="msg-date">' + date + '</span></span></h6> <br>' +
                 '<p>Evacuation Center: ' + evacuationCenter + '</p>' +
                 '<p>Disaster Name: ' + disasterName + '</p>');
 
@@ -233,8 +289,7 @@ else
             $('#modal-msg').modal('show');
         });
     });
-</script>
-<!-- End Inbox -->
+</script>*@
 
 
 
