--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -91,30 +91,52 @@ else
 
 <!-- Title and Add Button -->
 <div class="row mb-2">
-	<form method="POST">
+	<div class="col-12 d-flex align-items-center justify-content-between">
+		<h1><i class="bi bi-people-fill" style="padding: 0 5px 0 5px;"></i>Family</h1>
+
+		<div class="d-flex justify-content-end align-items-center">
+			@*<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="#" id="importCsvButton">
+			<i class="bi bi-box-arrow-up"></i> Upload CSV
+			<i class="bi bi-upload" style="padding: 5px;"></i> Upload CSV
+			</a>
+			<input type="file" id="csvInput" accept=".csv" style="display:none" onchange="handleFile()" />*@
+
+			<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/family/add/index">
+				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
+			</a>
+
+			@*<a class="btn btn-primary mb-2 button-spacing d-sm-none" href="#">
+			<i class="bi bi-upload"></i>
+			</a>*@
+			<a class="btn btn-primary mb-2 d-sm-none" href="/family/add/index">
+				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
+			</a>
+		</div>
+	</div>
+	@*<form method="POST">
 		<div class="col-12 d-flex align-items-center justify-content-between">
 			<h1><i class="bi bi-people-fill" style="padding: 0 5px 0 5px;"></i>Family</h1>
 
 			<div class="d-flex justify-content-end align-items-center">
-				@*<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="#" id="importCsvButton">
+				<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="#" id="importCsvButton">
 					<i class="bi bi-box-arrow-up"></i> Upload CSV
 					<i class="bi bi-upload" style="padding: 5px;"></i> Upload CSV
 				</a>
-				<input type="file" id="csvInput" accept=".csv" style="display:none" onchange="handleFile()" />*@
+				<input type="file" id="csvInput" accept=".csv" style="display:none" onchange="handleFile()" />
 
 				<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/family/add/index">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
 				</a>
 
-				@*<a class="btn btn-primary mb-2 button-spacing d-sm-none" href="#">
+				<a class="btn btn-primary mb-2 button-spacing d-sm-none" href="#">
 					<i class="bi bi-upload"></i>
-				</a>*@
+				</a>
 				<a class="btn btn-primary mb-2 d-sm-none" href="/family/add/index">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
 				</a>
 			</div>
 		</div>
-	</form>
+	</form>*@
 </div>
 
 <!-- Table -->
